# deribit

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  wait-for-it.sh
deribit/: base_classes.py  deribit.py  loading.py  main.py  mysql_client.py  settings.json
tests/: test_deribit_test_project.py
