[tool.poetry]
name = "deribit"
version = "0.1.0"
description = ""
authors = ["Кузьминых Василий <babas.ka@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^9.1"
pydantic = "^1.8.2"
aiomysql = "^0.0.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
